# SimpleRag

./: LICENSE  README.md  pyproject.toml
src/: index.py
src/index/: __init__.py  connection.py  crud.py  doc_loader.py  index.py  models.py  query.py  schema.py
src/old/: create.py  duck_db_index.py
src/simplerag/: __init__.py  core.py  utils.py
tests/: testing.py
