[project]
name = "simplerag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index>=0.12.52",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "tqdm>=4.67.1",
    "docling-core>=0.1.0",
    "python-dotenv>=0.21.0",
    "requests>=2.31.0",
    "docling>=2.52.0",
]
