[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplerag"
version = "0.1.0"
description = "A comprehensive document indexing and retrieval system using DuckDB and LlamaIndex."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" } # TODO: Update with your details
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "duckdb>=1.0.0",
    "pandas",
    "llama-index-core",
    "llama-index-embeddings-openai",
    "openai",
    "tqdm",
    "python-dotenv",
    "requests",
    "docling-core",
    "docling",
]

[project.urls]
Homepage = "https://github.com/your-username/SimpleRag" # TODO: Update with your repository URL
"Bug Tracker" = "https://github.com/your-username/SimpleRag/issues" # TODO: Update with your repository URL

